--- a/2120_ben_resume/2120_ben_resume/index.html
+++ b/2120_ben_resume/2120_ben_resume/index.html
@@ -150,7 +150,7 @@ https://www.tooplate.com/view/2120-ben-resume
                             <div class="item">
                                 <div class="testimonials-thumb d-flex">
                                     <div class="testimonials-image">
-                                        <img src="C:\Users\admin\Desktop\курс\14.jpg" class="img-fluid" alt="testimonials image">
+                                        <img src="https://st-1.akipress.org/st_gallery/22/781422.3090724a1ddd9944f7ca6fe1314adab7.500.jpg" class="img-fluid" alt="testimonials image">
                                     </div>
 
                                     <div class="testimonials-info">
@@ -165,7 +165,7 @@ https://www.tooplate.com/view/2120-ben-resume
                             <div class="item">
                                 <div class="testimonials-thumb d-flex">
                                     <div class="testimonials-image">
-                                        <img src="C:\Users\admin\Desktop\курс\13.jpg" class="img-fluid" alt="testimonials image">
+                                        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/Almazbek_Atambayev_2016-09-16.jpg" class="img-fluid" alt="testimonials image">
                                     </div>
 
                                     <div class="testimonials-info">
